added login controller, added jwt autentication, added middleware for validating jwt

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=mongodb+srv://Bollero420:NuziMp2IKeCNE0L2@cluster0.t5kbf.mongodb.net/<dbname>?retryWrites=true&w=majority
 PORT=4000
+JSON_WEB_TOKEN_KEY=_mega_secret_key_000_
